# app-template

./: .genignore  Cargo.toml  README.md  cargo-generate.toml  ci.sh  run-steps.sh  rust-toolchain.toml  template.toml
.cargo/: config.toml
.github/: bors.toml
.github/workflows/: build.yaml  ci.yml
src/: lib.rs
tests/: integration.rs
testsuite/: Cargo.toml
testsuite/src/: lib.rs
testsuite/tests/: test.rs
