[package]
# TODO(1) fix `authors` if you didn't use `cargo-generate`
authors = ["{{authors}}"]
name = "testsuite"
publish = false
edition = "2021"
version = "0.1.0"

[lib]
harness = false

[[test]]
name = "test"
harness = false

[dependencies]
{{project-name}} = { path = ".." }
cortex-m = "0.7"
cortex-m-rt = "0.7"
defmt = "0.3.0"
defmt-rtt = "0.3.0"
defmt-test = "0.3.0"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }

